# traininfo_notifier

./: .gitignore  LICENSE  Pipfile  README.md  caster.py  main.py  main_forecast.py  pyproject.toml  server.py  speech_synthesizer.py  yahoo_forecast_api.py  yahoo_train_info_scraper.py
.devcontainer/: Dockerfile  devcontainer.json
