[tool.poetry]
name = "traininfo_notifier"
version = "0.1.0"
description = ""
authors = ["shrkw <shrkwh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
google-cloud-texttospeech = "^2.1.0"
pychromecast = "^6.0.0"
requests = "^2.24.0"
lxml = "^4.5.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
ipython = "^7.15.0"
mypy = "^0.781"
rope = "^0.17.0"
pytest = "^5.4.2"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
